--- a/.env.example
+++ b/.env.example
@@ -3,8 +3,8 @@ SUPABASE_URL=
 SUPABASE_ANON_KEY=
 
 GEMINI_API_KEY=
-SUPABASE_SERVICE_ROLE_KEY=
-DB_PASSWORD=
+# SUPABASE_SERVICE_ROLE_KEY=
+# DB_PASSWORD=
 
 API_URL_ANDROID=
 API_URL_IOS=
